--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node ../homework/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "build" : "npm run start"
   },
   "keywords": [],
   "author": "",
