--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build" : "npm run start"
+    "build" : "npm run build"
   },
   "keywords": [],
   "author": "",
